# barrier_option_simulation

./: .gitignore
cmake_test/: CMakeLists.txt  remove_isys.sh
cmake_test/include/: hello.hpp
cmake_test/test/: main.cpp
time_changed_barrier_option/: BlackScholesTruePrice.cpp  BlackScholesTruePrice.hpp  CMakeLists.txt  conditional_brownian_motion_generator.cpp  conditional_brownian_motion_generator.hpp  first_hitting_time_generator.cpp  first_hitting_time_generator.hpp  function.cpp  function.hpp  generator_BM.cpp  generator_BM.hpp  generator_Euler_Maruyama.cpp  generator_Euler_Maruyama.hpp  generator_Euler_Maruyama_conditional.cpp  generator_Euler_Maruyama_conditional.hpp  generator_Euler_Maruyama_merger.cpp  generator_Euler_Maruyama_merger.hpp  generator_conditional_BM.cpp  generator_conditional_BM.hpp  generator_first_hitting_time.cpp  generator_first_hitting_time.hpp  generator_rand_num.cpp  generator_rand_num.hpp  main.cpp  operators_for_conditioned_Brownian_motion.cpp  operators_for_conditioned_Brownian_motion.hpp  rand_num_generator.cpp  rand_num_generator.hpp  vector_field_class.cpp  vector_field_class.hpp
time_changed_barrier_option.xcodeproj/: project.pbxproj
time_changed_barrier_option.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
time_changed_barrier_option.xcodeproj/project.xcworkspace/xcuserdata/Owner.xcuserdatad/: UserInterfaceState.xcuserstate
time_changed_barrier_option.xcodeproj/project.xcworkspace/xcuserdata/asanoryo.xcuserdatad/: UserInterfaceState.xcuserstate
time_changed_barrier_option.xcodeproj/time_changed_barrier_option.xcworkspace/xcuserdata/asanoryo.xcuserdatad/: UserInterfaceState.xcuserstate
time_changed_barrier_option.xcodeproj/xcuserdata/Owner.xcuserdatad/xcschemes/: xcschememanagement.plist
time_changed_barrier_option.xcodeproj/xcuserdata/asanoryo.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
time_changed_barrier_option.xcodeproj/xcuserdata/asanoryo.xcuserdatad/xcschemes/: time_changed_barrier_option.xcscheme  xcschememanagement.plist
time_changed_barrier_option/csv_output/: cond_BM_100paths_100grids.xltx  max_and_argmax_list_100paths_100grids.xltx
time_changed_barrier_option2/: CMakeLists.txt  cmake.sh
time_changed_barrier_option2/include/: black_scholes_explicit_expectation.h  constant.h  cumulative_dist_func.h  euler_maruyama_alg.h  prob_density_func.h  random_number_generator_func.h  statistical_functions.h  test_util.h  true_value.h
time_changed_barrier_option2/log/: result_N10m002_log.txt  result_N10m0_log.txt  result_N15m002_log.txt  result_N5m002_log.txt
time_changed_barrier_option2/log/m002/: plot.ipynb  result_N1m002_log.txt
time_changed_barrier_option2/main/: CMakeLists.txt  black_scholes_upper_barrier_main.cc  black_scholes_upper_barrier_variance_main.cc
time_changed_barrier_option2/src/: CMakeLists.txt  black_scholes_explicit_expectation.cc  cumulative_dist_func.cc  euler_maruyama_alg.cc  prob_density_func.cc  random_number_generator_func.cc  statistical_functions.cc  test_util.cc  true_value.cc
time_changed_barrier_option2/test/: CMakeLists.txt  black_scholes_explicit_expectation_test.cc  cumulative_dist_func_test.cc  euler_maruyama_alg_test.cc  main.cc  main_test.cc  prob_density_func_test.cc  random_number_generator_func_test.cc  statistical_functions_test.cc  test_util_test.cc  true_value_test.cc
time_changed_barrier_option_temp/: CMakeLists.txt  compile_commands.json
time_changed_barrier_option_temp/include/: BlackScholesTruePrice.hpp  generator_Euler_Maruyama.hpp  vector_field_class.hpp
time_changed_barrier_option_temp/src/: CMakeLists.txt  generator_Euler_Maruyama.cpp  generator_Euler_Maruyama_conditional.cpp  generator_first_hitting_time.cpp  generator_rand_num.cpp  vector_field_class.cpp
time_changed_barrier_option_temp/test/: CMakeLists.txt
